added timeline component

--- a/src/components/Accordion.scss
+++ b/src/components/Accordion.scss
@@ -11,15 +11,16 @@
 .accordion_wrapper .question-container {
   width: 100%;
   color: black;
+  font-size: 3rem;
   //   text-transform: uppercase;
   text-align: left;
   padding: 2rem 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-weight: 500;
-  font-size: 1.7rem;
-  letter-spacing: 0.1rem;
+  //   font-weight: 500;
+  //   font-size: 1.7rem;
+  //   letter-spacing: 0.1rem;
   background: transparent;
   border: none;
   cursor: pointer;
